# spectranext-sdk

./: .dockerignore  .gitignore  .gitmodules  Dockerfile.alpine  Dockerfile.ubuntu  Makefile  README.md  install.bat  install.ps1  install.sh  requirements.txt  source.ps1  source.sh
clibs/: libhttp.lib  libsocket.lib  libsocket_np.lib  libspdos.lib  libspdos_np.lib  libspectranet.lib  libspectranet_np.lib  libterm.lib
cmake/: spectranext_sdk_import.cmake
examples/: README.md
examples/file-io-example/: CMakeLists.txt  main.c
examples/hacker-news/: .gitignore  CMakeLists.txt  README.md  app.c  app.h  main.c  news_backend.c  news_backend.h  ui.c  ui.h
examples/hacker-news/scenes/: app.yaml
examples/https-copy/: CMakeLists.txt  main.c
examples/https-example/: CMakeLists.txt  main.c
examples/https-mount/: CMakeLists.txt  main.c
examples/libterm-printf/: CMakeLists.txt  README.md  main.c
examples/spdos-file-list/: CMakeLists.txt  main.c
include/: basicext.h  netdb.h  sockpoll.h  spdos.h  spectranet.h  spectranext.h
include/sys/: socket.h
